fix: overflowing file name in design studio report

--- a/frontend/src/app/components/design-studio/design-studio-container/report-item/report-item.component.css
+++ b/frontend/src/app/components/design-studio/design-studio-container/report-item/report-item.component.css
@@ -29,6 +29,7 @@
 .filename {
   font-size: 12px;
   width: 200px;
+  display: inline-block;
 }
 
 .report-name {
